...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@android:color/transparent"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/ib_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_tv"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_favorite"
            app:layout_anchor="@id/bab_main"
            app:tint="@android:color/holo_red_light"
...
