...
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.MyApplication.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
...
